--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "hg": "^0.3.3",
     "react": "^16.8.3",
     "react-dom": "^16.8.3",
+    "react-ionicons": "^3.0.1",
     "react-scripts": "2.1.5"
   },
   "scripts": {
