updated packages that had vunerabilities

--- a/package.json
+++ b/package.json
@@ -2,13 +2,13 @@
   "name": "objects",
   "version": "0.1.0",
   "private": true,
-  "homepage" : "http://chajon.ca/myapp",
+  "homepage": "http://chajon.ca/myapp",
   "dependencies": {
     "hg": "^0.3.3",
-    "react": "^16.8.3",
-    "react-dom": "^16.8.3",
+    "react": "^16.8.6",
+    "react-dom": "^16.8.6",
     "react-ionicons": "^3.0.1",
-    "react-scripts": "2.1.5"
+    "react-scripts": "^3.0.1"
   },
   "scripts": {
     "start": "react-scripts start",
